Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6868

MDT migration does not generate changelog records

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • Lustre 2.8.0
    • 3
    • 9223372036854775807

      Migrating a file between MDTs does not generate a changelog record. Since migration changes the FID of the file, the absence of changelog records make it difficult for tools such as Robinhood to track the state of filesystems on which migration is used.

            di.wang Di Wang (Inactive)
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: