lustre/include/lustre/lustre_user.h
@@ -732,6 +732,7 @@ enum changelog_rec_type {
 	CL_MTIME    = 17, /* Precedence: setattr > mtime > ctime > atime */
 	CL_CTIME    = 18,
 	CL_ATIME    = 19,
+	CL_MIGRATE  = 20,
 	CL_LAST
 };
 
@@ -739,7 +740,7 @@ static inline const char *changelog_type2str(int type) {
 	static const char *changelog_str[] = {
 		"MARK",  "CREAT", "MKDIR", "HLINK", "SLINK", "MKNOD", "UNLNK",
 		"RMDIR", "RENME", "RNMTO", "OPEN",  "CLOSE", "LYOUT", "TRUNC",
-		"SATTR", "XATTR", "HSM",   "MTIME", "CTIME", "ATIME",
+		"SATTR", "XATTR", "HSM",   "MTIME", "CTIME", "ATIME", "MIGRT"
 	};
 
 	if (type >= 0 && type < CL_LAST)
